src/golden/cards/templates/nested/typeerrors/test.golden/unreferenced.fl
	card UnreferencedTemplate
		template top
		
		template inner